--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.1",
   "description": "Simple boilerplate for @sota1235",
   "main": "index.js",
+  "engines": {
+    "node": ">=v10.10.0"
+  },
   "directories": {
     "lib": "lib"
   },
