--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,3 +22,9 @@ jobs:
       - run: npm run test
       - run: npm run lint
       - run: npm run build
+
+workflows:
+  version: 2
+  build-workflow:
+    jobs:
+    - test
