--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "fix": "prettier --write ./src/**/*.ts",
     "tslint": "tslint -c tslint.json 'src/**/*.ts'",
     "lint": "npm run fix && npm run tslint",
-    "test": "jest"
+    "test": "jest",
+    "test:ci": "jest -c ./jest.config.ci.js"
   },
   "keywords": [],
   "author": "@sota1235",
