--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,9 +21,19 @@ jobs:
           - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
 
-      - run: npm run test:ci
-      - run: npm run lint
-      - run: npm run build
+      - run:
+        name: test
+        command: |
+          npm run test:ci
+          npx codecov@3.0.2
+
+      - run:
+        name: lint
+        command: npm run lint
+
+      - run:
+        name: build
+        command: npm run build
 
 workflows:
   version: 2
