--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "lib": "lib"
   },
   "dependencies": {
-    "typescript": "^3.0.3"
+    "typescript": "^3.1.6"
   },
   "devDependencies": {
-    "@types/jest": "^23.3.5",
-    "husky": "^1.0.0-rc.15",
+    "@types/jest": "^23.3.9",
+    "husky": "^1.1.3",
     "jest": "^23.6.0",
     "lint-staged": "^7.3.0",
     "prettier": "^1.14.3",
