--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "lib": "lib"
   },
   "dependencies": {
+    "express": "^4.17.1",
     "typescript": "^3.1.6"
   },
   "devDependencies": {
+    "@types/express": "^4.17.1",
     "@types/jest": "24.0.18",
     "husky": "3.0.8",
     "jest": "24.9.0",
