--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "express": "^4.17.1",
+    "morgan": "^1.9.1",
     "typescript": "^3.1.6"
   },
   "devDependencies": {
     "@types/express": "^4.17.1",
     "@types/jest": "24.0.18",
+    "@types/morgan": "^1.7.37",
     "husky": "3.0.8",
     "jest": "24.9.0",
     "lint-staged": "9.4.1",
@@ -52,7 +54,9 @@
     ]
   },
   "nodemonConfig": {
-    "watch": ["src"],
+    "watch": [
+      "src"
+    ],
     "ext": "ts",
     "exec": "npm run start:dev"
   }
