--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "ESNEXT",
+    "target": "es2018",
     "module": "commonjs",
     "declaration": true,
     "removeComments": true,
