--- a/renovate.json
+++ b/renovate.json
@@ -1,28 +1,20 @@
 {
   "extends": [
-    "config:base",
+    ":separateMajorReleases",
+    ":ignoreUnstable",
+    ":prNotPending",
+    ":updateNotScheduled",
+    ":prHourlyLimitNone",
+    ":prConcurrentLimitNone",
+    ":automergeLinters",
+    ":automergeTesters",
+    ":automergeTypes",
+    ":automergePatch",
+    ":automergePr",
+    "group:monorepos",
+    "group:recommended",
     "schedule:weekends"
   ],
-  "timezone": "JP",
-  "packageRules": [
-    {
-      "groupName": "@types packages",
-      "updateTypes": ["minor", "patch"],
-      "automerge": true,
-      "schedule": ["at any time"]
-    },
-    {
-      "groupName": "devDependencies",
-      "updateTypes": ["minor", "patch"],
-      "automerge": true,
-      "schedule": ["at any time"]
-    },
-    {
-      "groupName": "auto merge only for patch version",
-      "depTypeList": ["dependencies"],
-      "updateTypes": ["patch"],
-      "automerge": true,
-      "schedule": ["at any time"]
-    }
-  ]
+  "prNotPendingHours": 1,
+  "timezone": "Asia/Tokyo"
 }
