modify: remove unused script

--- a/package.json
+++ b/package.json
@@ -36,12 +36,11 @@
     "watch": "nodemon",
     "start:dev": "ts-node src/index.ts",
     "start:prod": "node lib/index.js",
-    "fix": "npm run prettier:fix && npm run eslint:fix",
-    "lint": "npm run prettier && npm run eslint",
+    "fix": "npm run prettier && npm run eslint:fix",
+    "lint": "npm run eslint",
     "eslint": "eslint 'src/**/*.ts'",
     "eslint:fix": "npm run eslint --fix",
-    "prettier": "prettier './src/**/*.ts'",
-    "prettier:fix": "npm run prettier -- --write",
+    "prettier": "prettier './src/**/*.ts' --write",
     "test": "jest",
     "test:ci": "jest -c ./jest.config.ci.js"
   },
