--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "typescript": "^3.7.2"
   },
   "devDependencies": {
+    "@stoplight/spectral": "^5.3.0",
     "@types/express": "4.17.2",
     "@types/jest": "24.0.25",
     "@types/morgan": "1.7.37",
@@ -28,6 +29,7 @@
     "lint-staged": "9.5.0",
     "nodemon": "2.0.2",
     "prettier": "1.19.1",
+    "redoc-cli": "^0.9.7",
     "ts-jest": "24.3.0",
     "ts-node": "8.6.1"
   },
@@ -36,6 +38,9 @@
     "watch": "nodemon",
     "start:dev": "ts-node src/index.ts",
     "start:prod": "node lib/index.js",
+    "doc:dev": "redoc-cli serve ./spec.yml",
+    "doc:build": "redoc-cli bundle ./spec.yml",
+    "doc:lint": "spectral lint ./spec.yml",
     "fix": "npm run prettier && npm run eslint:fix",
     "lint": "npm run eslint",
     "eslint": "eslint 'src/**/*.ts'",
