--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,10 +17,14 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
-      - name: npm install, lint, test and build
+      - name: npm install
+        run: npm i
+      - name: lint
         run: |
-          npm i
-          npm run test:ci
-          npx codecov@3.0.2
           npm run lint
-          npm run build
+          npm run doc:lint
+      - name: test
+        run: npm run test:ci
+        npx codecov@3.0.2
+      - name: build
+        run: npm run build
