fix: yaml file for GitHub actions

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,8 @@ jobs:
           npm run lint
           npm run doc:lint
       - name: test
-        run: npm run test:ci
-        npx codecov@3.0.2
+        run: |
+          npm run test:ci
+          npx codecov@3.0.2
       - name: build
         run: npm run build
